--- a/templates/admin/product_details.html
+++ b/templates/admin/product_details.html
@@ -72,6 +72,7 @@
                                     <th>Product Name</th>
                                     <th>Description</th>
                                     <th>Normal Price</th>
+                                    <th>Discount</th>
                                     <th>Price</th>
                                     <th>Image</th>
                                     <th>Category</th>
@@ -85,6 +86,7 @@
                                         <td>{{ prod.product_name }}</td>
                                         <td>{{ prod.description }}</td>
                                         <td>{{ prod.normal_price }}</td>
+                                        <td>{{ prod.product_discount }}</td>
                                         <td>{{ prod.price }}</td>
                                         <td>
                                             {% if prod.image %}
