Transaction model for Wallet transaction

--- a/templates/includes/user_dashboard_navbar.html
+++ b/templates/includes/user_dashboard_navbar.html
@@ -170,6 +170,8 @@
             <ul class="sub-menu children dropdown-menu">
                 <li><a href="{% url 'coupons' %}" class="list-group-item" >  My Coupons</a></li>
                 <li></i><a href="{% url 'wishlist' %}" class="list-group-item" >  My Wishlist</a></li>
+                <li><a href="{% url 'coupons' %}" class="list-group-item" >  My Wallet</a></li>
+
             </ul>
           </li>
         </ul>
