User Wallet user side and admin side

--- a/templates/includes/user_dashboard_navbar.html
+++ b/templates/includes/user_dashboard_navbar.html
@@ -170,7 +170,7 @@
             <ul class="sub-menu children dropdown-menu">
                 <li><a href="{% url 'coupons' %}" class="list-group-item" >  My Coupons</a></li>
                 <li></i><a href="{% url 'wishlist' %}" class="list-group-item" >  My Wishlist</a></li>
-                <li><a href="{% url 'coupons' %}" class="list-group-item" >  My Wallet</a></li>
+                <li><a href="{% url 'my_wallet' %}" class="list-group-item" >  My Wallet</a></li>
 
             </ul>
           </li>
