--- a/templates/user_dashboard_base.html
+++ b/templates/user_dashboard_base.html
@@ -175,6 +175,36 @@
   margin-top:10px;
 }
 
+
+
+.pagination {
+  margin: 0 auto;
+  padding: 10px 0;
+}
+
+.pagination li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.pagination li a {
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #000;
+}
+
+.pagination li.active a {
+  background-color: #ccc;
+}
+
+.pagination li a:hover {
+  background-color: #eee;
+}
+
+
+.transaction-history {
+  overflow-x: auto;
+}
 </style>
 
 </head>
