--- a/templates/includes/admin_navbar.html
+++ b/templates/includes/admin_navbar.html
@@ -20,7 +20,7 @@
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-user"></i>Users</a>
                       <ul class="sub-menu children dropdown-menu">                            
                           <li><i class="fa fa-puzzle-piece"></i><a href="{% url 'admin_userdetails' %}">User Details</a></li>
-                          <li><i class="fa fa-puzzle-piece"></i><a href="{% url 'admin_user_wallet' %}">User Wallet</a></li>
+                          <li><i class="fa fa-wallet"></i></i><a href="{% url 'admin_user_wallet' %}">User Wallet</a></li>
                       </ul>
                   </li>
                   <li class="menu-item-has-children dropdown">
